css/logo-nav.css
/* ... */
.navbar-toggle > .white-icon-bar {
    background-color: white;
}

/* Bootstrap Breakpoint Media Queries */
/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  .section-white, .section-grey {
    padding: 5% 0;
  }
}
@media (max-width: 1200px) {
    .nb-highlight-text {
        margin-top: 32px;
    }
    .notebook-features .language-set h2{
        padding-top: 0;
    }
    .notebook-features #feature {
        padding-top: 4px;
    }
    .notebook-preview p {
        font-size: 15pt;
        line-height: 25pt;
    }
    .companies li{
        width:23%;
    }
}
/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    p {
        font-size: 16px;
        font-weight: 400;
        line-height: 1.375;
    }
    h4 {
        font-size: 18px;
        font-weight: 500;
        line-height: 1.22;
    }
    h3 {
        font-size: 28px;
        font-weight: 500;
        line-height: 1.25;
    }
    h2 {
        font-size: 36px;
        font-weight: 500;
        line-height: 1.25;
    }
    h1 {
        font-size: 48px;
        font-weight: 500;
        line-height: 1.05em;
    }
}
@media (max-width: 992px) {
    p {
        font-size: 16px;
        font-weight: 400;
        line-height: 1.25em;
    }
    h4 {
        font-size: 18px;
        font-weight: 500;
        line-height: 1.11em;
    }
    h3 {
        font-size: 22px;
        font-weight: 500;
        line-height: 1.136em;
    }
    h2 {
        font-size: 26px;
        font-weight: 500;
        line-height: 1.153em;
    }
    h1 {
        font-size: 32px;
        font-weight: 500;
        line-height: 1.25em;
    }
    .nb-highlight-text {
        text-align: center;
    }
    .notebook-features {
        margin-top: 0;
    }
    .language-set #feature {
        display: block;
    }
    .notebook-preview img {
        margin: 0 auto;
    }
    .notebook-icon {
        display: block;
        margin: 0 auto;
        padding-bottom: 10px;
    }
    .notebook-preview h1 {
        text-align: center;
    }
    .notebook-features  img {
        margin: 0 auto;
        width: 125px;
    }
    .notebook-features {
        text-align: center;
    }
    .notebook-feature {
        padding-top: 40px;
    }
    .hubfeatures{
        background: none;
    }
    #data {
        padding-top: 40px;
    }
    .hubfeature h2 {
        text-align: center;
    }
    #hublogo {
        width: 60%;
    }
    .architecturedescription h2 {
        text-align: center;
    }
    .architecturedescription p {
        text-align: center;
    }
    .donate-box {
        margin-top: 10%;
    }
    .resource-section {
        height: 400px;
        padding: 10px 0 30px;
    }
    .resource-section:nth-child(even) {
        border-left: 1px solid #E8E8E8;
    }
    .resource-section img {
        margin-top: 15px;
        padding-bottom: 0;
    }
    .resource-content {
        padding-top: 48px;
    }
    .resource-text {
        padding-top: 0;
        text-align: center;
    }
    .nav>li>a {
        font-size: 13px;
        letter-spacing: 1px;
    }
}
/* Small devices (tablets, 768px and up) */
@media(min-width:768px) {

    .navbar-fixed-top .navbar-brand {
        padding: 15px 0;
    }
    .tab {
        text-align: center;
    }
    .follow {
        margin-top: 15px;
    }
    .navbar-toggle {
        margin-top: 20px;
    }
}
@media (max-width: 768px) {
    p {
        font-size: 16px;
        font-weight: 400;
        line-height: 1.25em;
    }
    h4 {
        font-size: 18px;
        font-weight: 500;
        line-height: 1.11em;
    }
    h3 {
        font-size: 22px;
        font-weight: 500;
        line-height: 1.136em;
    }
    h2 {
        font-size: 26px;
        font-weight: 500;
        line-height: 1.153em;
    }
    h1 {
        font-size: 32px;
        font-weight: 500;
        line-height: 1.25em;
    }
    .navbar-header {
        margin-bottom: 0;
    }
    .navbar-toggle {
        padding-top: 10px;
    }
    .navbar-logo {
        height: 40px;
        margin-top: 6px;
    }
    .companies li {
        width: 30%;
    }
    body {
        padding-top: 50px;
    }
    .jumbotron {
        margin-right: 5%;
    }
    .jupytercon-jumbotron {
        margin-right: 0px;
    }
}
/* Extra small devices (these are mostly fixes to make sure elements act correctly to look good) */
@media (min-width: 509px) {
    .follow {
        float: right !important;
    }
    .footer ul {
        float: left;
    }
}
@media(max-width:509px) {
    .install-button {
        margin-top: 20px;
    }
    .items {
        min-height:0;
        padding:10px;
    }
    .follow {
        display: block;
        margin: 0 auto;
    }
    .footer {
        padding-bottom: 15px;
        text-align: center;
    }
    .footer ul {
        float: left;
    }
}

